# authkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
docs/: api-contract.md  architecture.md  dev_snapshot.md  settings-contract.md
scripts/: snapshot.sh
src/authkit/: apps.py
tests/: settings.py
